// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticleList component should render a list of articles given a list of articles 1`] = `
<ArticleList
  activeArticleData={
    Object {
      "id": "itemOne",
    }
  }
  data={
    Array [
      Object {
        "id": "itemOne",
      },
      Object {
        "id": "itemTwo",
      },
      Object {
        "id": "itemTHree",
      },
    ]
  }
  errorLoading={false}
  fetchingMoreArticles={false}
  loadMoreClickHandler={[MockFunction]}
  loading={false}
  selectArticleHandler={[MockFunction]}
>
  <div
    className="ArticleList"
  >
    <ArticlesContent
      activeArticleData={
        Object {
          "id": "itemOne",
        }
      }
      data={
        Array [
          Object {
            "id": "itemOne",
          },
          Object {
            "id": "itemTwo",
          },
          Object {
            "id": "itemTHree",
          },
        ]
      }
      fetchingMoreArticles={false}
      loadMoreClickHandler={[MockFunction]}
      selectArticleHandler={[MockFunction]}
    >
      <div
        className="articles_wrapper"
      >
        <ArticleEntry
          id="itemOne"
          key="itemOne"
          onClickHandler={[Function]}
          selected={true}
        >
          <div
            className="ArticleEntry selected"
            onClick={[Function]}
          >
            <div
              className="thumbnail_wrapper"
            >
              <FadeImage
                name="thumbnail"
                src=""
              >
                <div
                  className="FadeImage"
                >
                  <img
                    alt="thumbnail"
                    onLoad={[Function]}
                    src=""
                  />
                  <div
                    className="placeholder"
                  />
                </div>
              </FadeImage>
            </div>
            <div
              className="details_wrapper"
            >
              <div
                className="title_author"
              >
                <div
                  className="title block-with-text"
                />
                <div
                  className="author"
                />
                <div
                  className="date"
                >
                  <label />
                </div>
              </div>
            </div>
            <div
              className="button_wrapper"
            >
              <img
                alt="caret_right"
                src="right-chevron.svg"
              />
            </div>
          </div>
        </ArticleEntry>
        <ArticleEntry
          id="itemTwo"
          key="itemTwo"
          onClickHandler={[Function]}
          selected={false}
        >
          <div
            className="ArticleEntry"
            onClick={[Function]}
          >
            <div
              className="thumbnail_wrapper"
            >
              <FadeImage
                name="thumbnail"
                src=""
              >
                <div
                  className="FadeImage"
                >
                  <img
                    alt="thumbnail"
                    onLoad={[Function]}
                    src=""
                  />
                  <div
                    className="placeholder"
                  />
                </div>
              </FadeImage>
            </div>
            <div
              className="details_wrapper"
            >
              <div
                className="title_author"
              >
                <div
                  className="title block-with-text"
                />
                <div
                  className="author"
                />
                <div
                  className="date"
                >
                  <label />
                </div>
              </div>
            </div>
            <div
              className="button_wrapper"
            >
              <img
                alt="caret_right"
                src="right-chevron.svg"
              />
            </div>
          </div>
        </ArticleEntry>
        <ArticleEntry
          id="itemTHree"
          key="itemTHree"
          onClickHandler={[Function]}
          selected={false}
        >
          <div
            className="ArticleEntry"
            onClick={[Function]}
          >
            <div
              className="thumbnail_wrapper"
            >
              <FadeImage
                name="thumbnail"
                src=""
              >
                <div
                  className="FadeImage"
                >
                  <img
                    alt="thumbnail"
                    onLoad={[Function]}
                    src=""
                  />
                  <div
                    className="placeholder"
                  />
                </div>
              </FadeImage>
            </div>
            <div
              className="details_wrapper"
            >
              <div
                className="title_author"
              >
                <div
                  className="title block-with-text"
                />
                <div
                  className="author"
                />
                <div
                  className="date"
                >
                  <label />
                </div>
              </div>
            </div>
            <div
              className="button_wrapper"
            >
              <img
                alt="caret_right"
                src="right-chevron.svg"
              />
            </div>
          </div>
        </ArticleEntry>
        <div
          className="load_control"
          onClick={[MockFunction]}
        >
          <div
            className="text"
          >
            Load More
          </div>
        </div>
      </div>
    </ArticlesContent>
  </div>
</ArticleList>
`;

exports[`ArticleList component should render a loading indicator when loading 1`] = `
<ArticleList
  loading={true}
>
  <div
    className="ArticleList"
  >
    <LoadingContent>
      <div
        className="center_wrapper"
      >
        <div>
          <div
            className="loader_bars"
          >
            Loading...
          </div>
        </div>
      </div>
    </LoadingContent>
  </div>
</ArticleList>
`;

exports[`ArticleList component should render an empty article list message and image 1`] = `
<ArticleList
  data={null}
  errorLoading={false}
  loading={false}
>
  <div
    className="ArticleList"
  >
    <EmptyContent>
      <div
        className="center_wrapper"
      >
        <div>
          <img
            alt="no_posts_image"
            src="empty.png"
          />
          <div
            className="description"
          >
            These aren't the articles you are
          </div>
          <div
            className="description"
          >
            looking for
          </div>
        </div>
      </div>
    </EmptyContent>
  </div>
</ArticleList>
`;

exports[`ArticleList component should render an error message and a retry button when failed to get posts 1`] = `
<ArticleList
  errorLoading={true}
  loading={false}
  retryButtonHandler={[MockFunction]}
>
  <div
    className="ArticleList"
  >
    <ErrorLoadingContent
      retryButtonHandler={[MockFunction]}
    >
      <div
        className="center_wrapper"
      >
        <div>
          <div
            className="description"
          >
            WE COULDN'T GET THE POSTS
          </div>
          <button
            className="retry_button"
            onClick={[MockFunction]}
          >
            Try Again
          </button>
        </div>
      </div>
    </ErrorLoadingContent>
  </div>
</ArticleList>
`;
